# snake-pyxel

./: README.md  pyproject.toml
snake/: snake.py
