[tool.poetry]
name = "snake-pyxel"
version = "0.1.0"
description = "A simple snake game created with pyxel"
authors = ["Wyatt Ferguson <wyattf@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyxel = "^2.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
